@@ -1,13 +1,19 @@
 
 103/3:
 
+ * Changed `call-in-nested-thread' to move pre-queued breaks on the
+   original thread to the nested thread, and also move leftover breaks
+   on a completed nested thread to the original thread.
+
  * Unix: fixed bug in writing/closing file-stream output ports; if an
    error occurred during write, the port was permanently locked, so
    all port operations blocked.
 
- * Fixed blocking on output to a limited port with a closed read
-   end; already-blocked threads are now released when the read end is
-   closed.
+ * Fixed output to a limited port with a closed reader end; blocked
+   threads are now released when the reader end is closed.
+
+ * MacOS: changed `split-path' to preserve the colon suffix on a root
+   name.
 
 103/2:
 
@@ -81,6 +87,8 @@ Changed order of first two arguments to process[*]/ports, and
  fixed bugs
 Fixed bugs in (eval (compile e))
 Unix: fixed interaction among signals, I/O, and process sleeping
+Unix: fixed bug in writing/closing file-stream output ports
+ when a write error occurs
 
 Version 102, June 26, 2000
 Switched to configure-based makefiles (autoconf)
